# XiaoYang/internal/routers/character_router.go
@@ -1,0 +1,61 @@
+// Code generated by https://github.com/go-dev-frame/sponge
+
+package routers
+
+import (
+	"github.com/gin-gonic/gin"
+
+	"github.com/go-dev-frame/sponge/pkg/logger"
+	//"github.com/go-dev-frame/sponge/pkg/middleware"
+
+	XiaoYangV1 "XiaoYang/api/XiaoYang/v1"
+	"XiaoYang/internal/handler"
+)
+
+func init() {
+	allMiddlewareFns = append(allMiddlewareFns, func(c *middlewareConfig) {
+		characterServiceMiddlewares(c)
+	})
+
+	allRouteFns = append(allRouteFns,
+		func(r *gin.Engine, groupPathMiddlewares map[string][]gin.HandlerFunc, singlePathMiddlewares map[string][]gin.HandlerFunc) {
+			characterServiceRouter(r, groupPathMiddlewares, singlePathMiddlewares, handler.NewCharacterServiceHandler())
+		})
+}
+
+func characterServiceRouter(
+	r *gin.Engine,
+	groupPathMiddlewares map[string][]gin.HandlerFunc,
+	singlePathMiddlewares map[string][]gin.HandlerFunc,
+	iService XiaoYangV1.CharacterServiceLogicer) {
+	XiaoYangV1.RegisterCharacterServiceRouter(
+		r,
+		groupPathMiddlewares,
+		singlePathMiddlewares,
+		iService,
+		XiaoYangV1.WithCharacterServiceLogger(logger.Get()),
+		XiaoYangV1.WithCharacterServiceHTTPResponse(),
+		XiaoYangV1.WithCharacterServiceErrorToHTTPCode(
+		// Set some error codes to standard http return codes,
+		// by default there is already ecode.InternalServerError and ecode.ServiceUnavailable
+		// example:
+		// 	ecode.Forbidden, ecode.LimitExceed,
+		),
+	)
+}
+
+// you can set the middleware of a route group, or set the middleware of a single route,
+// or you can mix them, pay attention to the duplication of middleware when mixing them,
+// it is recommended to set the middleware of a single route in preference
+func characterServiceMiddlewares(c *middlewareConfig) {
+	// set up group route middleware, group path is left prefix rules,
+	// if the left prefix is hit, the middleware will take effect, e.g. group route is /api/v1, route /api/v1/characterService/:id  will take effect
+	// c.setGroupPath("/api/v1/characterService", middleware.Auth())
+
+	// set up single route middleware, just uncomment the code and fill in the middlewares, nothing else needs to be changed
+	//c.setSinglePath("POST", "/api/v1/character/createCharacter", middleware.Auth())    // CreateCharacter 创建角色
+	//c.setSinglePath("POST", "/api/v1/character/updateCharacter", middleware.Auth())    // UpdateCharacter 更新角色信息
+	//c.setSinglePath("POST", "/api/v1/character/deleteCharacter", middleware.Auth())    // DeleteCharacter 删除角色
+	//c.setSinglePath("POST", "/api/v1/character/getCharacter", middleware.Auth())    // GetCharacter 获取角色详情
+	//c.setSinglePath("POST", "/api/v1/character/listUserCharacters", middleware.Auth())    // ListUserCharacters 列出用户所有角色
+}
